--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                                     </div>
                                 </div>
 
-                                <div class="tesGit">
-                                    <p>Aufa azka</p>
+                                <div class="tesaufa">
+                                    <p>Aufa</p>
                                 </div>
 </body>
 </html>
